Fixed newsletter on mobile

--- a/_assets/styles/modules/_footer-newsletter.scss
+++ b/_assets/styles/modules/_footer-newsletter.scss
@@ -13,8 +13,9 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 96px;
-    img {
-        border-radius: 50%;
+    svg {
+        display: inline-block;
+        width: 100%;
     }
 }
 
@@ -62,7 +63,6 @@
         width: 30%;
         margin-right: 1.5em;
         svg {
-            display: inline-block;
             vertical-align: middle;
         }
     }
