--- a/_assets/styles/modules/_hero.scss
+++ b/_assets/styles/modules/_hero.scss
@@ -47,6 +47,10 @@
     }
 }
 
+.hero a{
+    color: $white;
+}
+
 .hero__credit{
     opacity: 0.8;
     font-size: 0.75rem;
