--- a/_assets/styles/modules/_subscribe-form.scss
+++ b/_assets/styles/modules/_subscribe-form.scss
@@ -6,7 +6,7 @@
 
 .subscribe-form .form-group {
     margin-bottom: 0;
-    flex: 3 0 0;
+    flex: 2.5 0 0;
 }
 .subscribe-form .btn {
     flex: 1 0 0;
